--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
     "commander": "^9.4.0",
     "dotenv": "^16.0.1",
     "platypus-tools": "^0.0.9",
-    "shelljs": "^0.8.5"
+    "shelljs": "^0.8.5",
+    "typescript": "^4.9.5"
   },
   "scripts": {
+    "preinstall": "npx only-allow pnpm",
     "build": "cli/build",
     "start": "cli/start"
+  },
+  "devDependencies": {
+    "@media-factory-cz/prettier-config": "^1.0.3",
+    "prettier": "^2.8.4"
   }
 }
