--- a/repositories/node/18/Dockerfile
+++ b/repositories/node/18/Dockerfile
@@ -4,10 +4,10 @@ LABEL org.opencontainers.image.authors="info@eliasondrej.com"
 
 RUN apt-get update && apt-get upgrade -y
 
-USER node
-
-RUN "npm install -g pnpm"
+RUN apt install graphviz -y
 
 RUN npm install -g pnpm
+
+USER node
 
 WORKDIR /var/www/html
