--- a/repositories/node/18/Dockerfile
+++ b/repositories/node/18/Dockerfile
@@ -6,6 +6,8 @@ RUN apt-get update && apt-get upgrade -y
 
 RUN apt install graphviz -y
 
+RUN apt-get install iputils-ping -y
+
 RUN npm install -g pnpm
 
 USER node
