--- a/repositories/node/20-bullseye/Dockerfile
+++ b/repositories/node/20-bullseye/Dockerfile
@@ -4,6 +4,8 @@ LABEL org.opencontainers.image.authors="info@eliasondrej.com"
 
 RUN npm install -g pnpm
 
+RUN apt-get install iputils-ping -y
+
 USER node
 
 SHELL ["/bin/bash", "-c"]
